Feature Engineering - Add Title property

--- a/titanic/titanic surviver.ipynb
+++ b/titanic/titanic surviver.ipynb
@@ -22,13 +22,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "##### properties\n",
+    "## Import train and test set\n",
+    "#### properties\n",
     "| Variable | Definition | Key |\n",
     "| :------- | ---------: | --: |\n",
     "| survival | Survival | 0 = No, 1 = Yes |\n",
@@ -294,6 +290,86 @@
    ],
    "source": [
     "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Feature Engineering with the Titanic Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "def substrings_in_string(big_string, substrings):\n",
+    "    for substring in substrings:\n",
+    "        if big_string.find(substring) != -1:\n",
+    "            return substring\n",
+    "    print (big_string)\n",
+    "    return np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_list=['Mrs', 'Mr', 'Master', 'Miss', 'Major', 'Rev',\n",
+    "                    'Dr', 'Ms', 'Mlle','Col', 'Capt', 'Mme', 'Countess',\n",
+    "                    'Don', 'Jonkheer']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame.copy(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df['Title'] = df['Name'].map(lambda x: substrings_in_string(x, title_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def replace_titles(x):\n",
+    "    title = x['Title']\n",
+    "    if title in ['Don', 'Major', 'Capt', 'Jonkheer', 'Rev', 'Col']:\n",
+    "        return 'Mr'\n",
+    "    elif title in ['Countess', 'Mme']:\n",
+    "        return 'Mrs'\n",
+    "    elif title in ['Mlle', 'Ms']:\n",
+    "        return 'Miss'\n",
+    "    elif title == 'Dr':\n",
+    "        if x['Sex'] == 'Male':\n",
+    "            return 'Mr'\n",
+    "        else:\n",
+    "            return 'Mrs'\n",
+    "    else:\n",
+    "        return title\n",
+    "\n",
+    "df['Title'] = df.apply(replace_titles, axis=1)"
    ]
   },
   {
