Feature Engineering - Add Deck

--- a/titanic/titanic surviver.ipynb
+++ b/titanic/titanic surviver.ipynb
@@ -301,16 +301,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "def substrings_in_string(big_string, substrings):\n",
+    "    if type(big_string) is not 'str':\n",
+    "        return np.nan\n",
     "    for substring in substrings:\n",
     "        if big_string.find(substring) != -1:\n",
     "            return substring\n",
-    "    print (big_string)\n",
+    "#     print (big_string)\n",
     "    return np.nan"
    ]
   },
@@ -370,6 +372,98 @@
     "        return title\n",
     "\n",
     "df['Title'] = df.apply(replace_titles, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Turning cabin number into Deck\n",
+    "cabin_list = ['A', 'B', 'C', 'D', 'E', 'F', 'T', 'G', 'Unknown']\n",
+    "df['Deck'] = df['Cabin'].map(lambda x: substrings_in_string(x, cabin_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     NaN\n",
+       "1     NaN\n",
+       "2     NaN\n",
+       "3     NaN\n",
+       "4     NaN\n",
+       "5     NaN\n",
+       "6     NaN\n",
+       "7     NaN\n",
+       "8     NaN\n",
+       "9     NaN\n",
+       "10    NaN\n",
+       "11    NaN\n",
+       "12    NaN\n",
+       "13    NaN\n",
+       "14    NaN\n",
+       "15    NaN\n",
+       "16    NaN\n",
+       "17    NaN\n",
+       "18    NaN\n",
+       "19    NaN\n",
+       "20    NaN\n",
+       "21    NaN\n",
+       "22    NaN\n",
+       "23    NaN\n",
+       "24    NaN\n",
+       "25    NaN\n",
+       "26    NaN\n",
+       "27    NaN\n",
+       "28    NaN\n",
+       "29    NaN\n",
+       "       ..\n",
+       "861   NaN\n",
+       "862   NaN\n",
+       "863   NaN\n",
+       "864   NaN\n",
+       "865   NaN\n",
+       "866   NaN\n",
+       "867   NaN\n",
+       "868   NaN\n",
+       "869   NaN\n",
+       "870   NaN\n",
+       "871   NaN\n",
+       "872   NaN\n",
+       "873   NaN\n",
+       "874   NaN\n",
+       "875   NaN\n",
+       "876   NaN\n",
+       "877   NaN\n",
+       "878   NaN\n",
+       "879   NaN\n",
+       "880   NaN\n",
+       "881   NaN\n",
+       "882   NaN\n",
+       "883   NaN\n",
+       "884   NaN\n",
+       "885   NaN\n",
+       "886   NaN\n",
+       "887   NaN\n",
+       "888   NaN\n",
+       "889   NaN\n",
+       "890   NaN\n",
+       "Name: Deck, Length: 891, dtype: float64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Deck']"
    ]
   },
   {
